fixed the header to top, so when drop down is show, the page doesnt shift downwards. the dropdown overlays on the page

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,12 @@ body {
   text-decoration: underline #ffd800;
   text-decoration-thickness: 5px;
 }
+.navbar-toggler {
+  border: 3px solid black;
+}
+.show {
+  border: none;
+}
 .navbar {
   background-color: aliceblue;
 }
